--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "rimraf ./docs && cross-env NODE_ENV=development rollup --config --watch",
     "serve": "rimraf ./docs && cross-env NODE_ENV=development rollup --config --watch",
-    "build": "rimraf ./docs && cross-env NODE_ENV=production rollup --config"
+    "build": "rimraf ./docs && cross-env NODE_ENV=production rollup --config && cp -R -f ./docs/* ~/MyProject/NodeServer/jmg"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
